<resources>
    <string name="app_name">Instagram</string>
    <string name="login_user">Número de telefone, email ou nome de usuário</string>
    <string name="login_password">Senha</string>
    <string name="enter">Entrar</string>
    <string name="or">Ou</string>
    <string name="login_register">Não tem uma conta? <b>Cadastre-se.</b></string>
    <string name="next">Avançar</string>
    <string name="step_login">Já tem uma conta? <b>Entrar</b></string>
    <string name="complete_name">Nome completo</string>
    <string name="label_name_and_password">Nome e Senha</string>
    <string name="button_continue">Continuar</string>
    <string name="register">Cadastre-se</string>
    <string name="register_instagram_policy">Ao clicar em Cadastre-se, você concorda com nossos <font color="#000000"><b>Termos</b></font>, com a <font color="#000000"><b>Política de Dados</b></font> e com a <font color="#000000"><b>Política de Cookies</b></font>.</string>
    <string name="confirm_registration">Cadastrar-se como\n %s?</string>
    <string name="text_view_user_name_alter_info">Você poderá alterar seu nome de usuário depois.</string>
    <string name="add_perfil_photo">Adicionar foto de perfil</string>
    <string name="add_profile_photo">Adicionar foto de perfil</string>
    <string name="add_profile_photo_subtitle">Adicione uma foto de perfil para que seus amigos saibam que e voce.</string>
    <string name="btn_add_profile_photo">Adicionar uma foto</string>
    <string name="skip_step">Pular</string>
    <string name="define_photo">Definir uma foto de perfil</string>
    <string name="galery">Galeria</string>
    <string name="camera">Câmera</string>
    <string name="menu_home">Home</string>
    <string name="menu_sarch">Pesquisar</string>
    <string name="menu_add">Adicionar</string>
    <string name="menu_search">Pesquisar</string>
    <string name="menu_fav">Favorito</string>
    <string name="menu_profile">Perfil</string>
    <string name="profile_posts_counter">Publicações</string>
    <string name="profile_posts_followers_counter">Seguidores</string>
    <string name="profile_posts_following_counter">Seguindo</string>
    <string name="username">Nome do usuário</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="menu_profile_grid">Imagens</string>
    <string name="menu_profile_list">Lista</string>
    <string name="menu_profile_user">Usuário</string>
    <string name="config">Configurações</string>
    <string name="profile_username">Username</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget velit in erat laoreet dignissim sed quis urna. Nulla vitae interdum risus. Nulla facilisi. Cras in efficitur ex, et bibendum ante. Nunc vehicula blandit erat. In porta tortor quis velit tempor, ac congue arcu elementum. Fusce dui eros, posuere in metus ut, eleifend consectetur ex. Cras sodales aliquam nisi, eu fermentum tellus accumsan at. Quisque elementum libero eu neque pellentesque, ac varius massa hendrerit. Mauris ac magna in lorem gravida tincidunt quis sed est. Sed ac arcu a velit consequat tristique. Nulla imperdiet nisi dolor, quis suscipit diam congue posuere. Suspendisse imperdiet nec tellus sit amet dignissim. Aliquam id libero ullamcorper, tempor mi nec, finibus neque.</string>
    <string name="activities">Atividades</string>
    <string name="stop_following">Deixar de seguir</string>
    <string name="invalid_email">E-mail invalido</string>
    <string name="invalid_password">Senha incorreta</string>
    <string name="invalid_password_length">Senha precisa ter mais que 8 caracteres</string>
    <string name="login_error">Falha ao fazer login</string>
    <string name="email_not_found">E-mail não encontrado</string>
    <string name="wrong_password">Senha invalida</string>
    <string name="email_alredy_exists">E-mail já cadastrado</string>
    <string name="invalid_password_lenght">Senha precisa ter mais que 8 caracteres</string>
    <string name="invalid_name_length">Nome precisa ter mais que 3 caracteres</string>
    <string name="register_error_user_exists">Usuário já existe</string>
    <string name="register_fail">Não foi possível registrar o usuário</string>
    <string name="hint_email">E-mail</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Salvar</string>
    <string name="session_user_not_found">Usuário não está logado</string>
    <string name="counter_zero">0</string>
    <string name="request_user_profile_fail">Falha ao buscar dados do usuário</string>
    <string name="request_user_profile_posts_fail">Falha ao buscar posts de usuário</string>
    <string name="empty_user_posts">Sem posts…</string>
    <string name="error_feed">Erro ao buscar públicações…</string>
    <string name="empty_feed">Lista de postagem vázia…</string>
    <string name="gallery">Galeria</string>
    <string name="permission_camera_denied">Permissão de acesso a câmera não concedida</string>
    <string name="hint_caption">Descrição</string>
    <string name="share">Compartilhar</string>
    <string name="error_fetch_gallery_pictures">Erro ao buscar as fotos da galeria</string>
    <string name="empty_device_gallery">Não há fotos na galeria...</string>
    <string name="search">Pesquisar</string>
    <string name="empty_search_list">Nenhum resultado encontrado...</string>
    <string name="error_search">Erro ao efetuar busca, tente novamente...</string>
    <string name="unfollow">Parar de seguir</string>
    <string name="follow">Seguir</string>
    <string name="internal_server_error">Erro interno do servidor...</string>
    <string name="error_session_user">Falha ao acessar a sessão do usuário</string>
    <string name="error_update_photo">Não foi possível atulizar a foto de perfil</string>
    <string name="invalid_login">Não foi possível fazer o login</string>
    <string name="error_loading_posts">Nao foi possivel buscar os posts</string>
    <string name="logout">Sair</string>
</resources>