<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="@dimen/view_medium_spacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
    >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_view_add_photo"
            android:src="@drawable/camera_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null"
            android:layout_marginBottom="@dimen/view_medium_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1"
        />

        <TextView
            android:text="@string/add_profile_photo"
            android:textStyle="bold"
            style="@style/Theme.Instagram.TextView.Title.Form"
        />

        <TextView
            android:text="@string/add_profile_photo_subtitle"
            style="@style/Theme.Instagram.SubTitle.Form"
            android:layout_marginStart="@dimen/activity_horizontal_margin_small"
        />

        <co.pvitor.instagram.common.view.LoadingButton
            android:id="@+id/loading_button_add_photo"
            app:text="@string/btn_add_profile_photo"
            app:enabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />

        <Button
            android:id="@+id/button_skip_step"
            android:text="@string/skip_step"
            style="@style/Theme.Instagram.ButtonLink"
            android:layout_gravity="center"
        />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>