<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:text="@string/label_name_and_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scroll_view_form"
    />

    <ScrollView
        android:id="@+id/scroll_view_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="22dp"
        >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_name_input"
                style="@style/Theme.Instagram.FormEditTextInput"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_name"
                    android:hint="@string/complete_name"
                    android:inputType="text"
                    style="@style/Theme.Instagram.FormEditText"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_register_password_input"
                style="@style/Theme.Instagram.FormEditTextInput"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_register_password"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    style="@style/Theme.Instagram.FormEditText"/>
            </com.google.android.material.textfield.TextInputLayout>

            <co.pvitor.instagram.common.view.LoadingButton
                android:id="@+id/loading_button_register_password"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:text="@string/button_continue"
            />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>