<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        >

            <ImageView
                android:src="@drawable/photo_icon"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/view_medium_spacing"
                android:contentDescription="@null"
            />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_register_email_input"
                app:hintEnabled="false"
                style="@style/Theme.Instagram.FormEditTextInput">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_register_email"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    style="@style/Theme.Instagram.FormEditText"/>

            </com.google.android.material.textfield.TextInputLayout>

            <co.pvitor.instagram.common.view.LoadingButton
                android:id="@+id/loading_button_register_email"
                app:text="@string/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            />

        </LinearLayout>

    </ScrollView>

    <View
        style="@style/Theme.Instagram.ViewLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_view_step_login"
    />

    <TextView
        android:id="@+id/text_view_step_login"
        android:text="@string/step_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="@dimen/text_item_padding"
        android:textColor="@color/black"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>