<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_profile_photo"
        android:src="@drawable/ic_insta_profile_thin"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:civ_circle_background_color="@color/gray_border"
        app:civ_border_color="@color/gray_darker"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <de.hdodenhof.circleimageview.CircleImageView
        android:src="@drawable/ic_insta_add_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:civ_circle_background_color="@color/blue_enabled"
        app:civ_border_color="@color/white"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="@id/civ_profile_photo"
        app:layout_constraintBottom_toBottomOf="@id/civ_profile_photo"
    />

    <TextView
        android:id="@+id/text_view_posts_counter"
        tools:text="0"
        style="@style/Theme.Instagram.TextViewProfile"
        app:layout_constraintStart_toEndOf="@id/civ_profile_photo"
        app:layout_constraintTop_toTopOf="@id/civ_profile_photo"
        app:layout_constraintEnd_toStartOf="@id/text_view_followers_counter"
        app:layout_constraintBottom_toTopOf="@id/text_view_posts"
        app:layout_constraintVertical_chainStyle="packed"
    />

    <TextView
        android:id="@+id/text_view_followers_counter"
        tools:text="0"
        style="@style/Theme.Instagram.TextViewProfile"
        app:layout_constraintEnd_toStartOf="@id/text_view_following_counter"
        app:layout_constraintStart_toEndOf="@id/text_view_posts_counter"
        app:layout_constraintTop_toTopOf="@id/civ_profile_photo"
        app:layout_constraintBottom_toTopOf="@id/text_view_followers"
        app:layout_constraintVertical_chainStyle="packed"
    />

    <TextView
        android:id="@+id/text_view_following_counter"
        tools:text="0"
        style="@style/Theme.Instagram.TextViewProfile"
        app:layout_constraintStart_toEndOf="@id/text_view_followers_counter"
        app:layout_constraintTop_toTopOf="@id/civ_profile_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_view_following"
        app:layout_constraintVertical_chainStyle="packed"
    />

    <TextView
        android:id="@+id/text_view_posts"
        tools:text="@string/profile_posts_counter"
        style="@style/Theme.Instagram.TextViewProfile"
        app:layout_constraintStart_toStartOf="@id/text_view_posts_counter"
        app:layout_constraintTop_toBottomOf="@id/text_view_posts_counter"
        app:layout_constraintEnd_toStartOf="@id/text_view_followers"
        app:layout_constraintBottom_toBottomOf="@id/civ_profile_photo"
    />

    <TextView
        android:id="@+id/text_view_followers"
        tools:text="@string/profile_posts_followers_counter"
        style="@style/Theme.Instagram.TextViewProfile"
        app:layout_constraintTop_toBottomOf="@id/text_view_followers_counter"
        app:layout_constraintStart_toEndOf="@id/text_view_posts"
        app:layout_constraintEnd_toStartOf="@id/text_view_following"
        app:layout_constraintBottom_toBottomOf="@id/civ_profile_photo"
    />

    <TextView
        android:id="@+id/text_view_following"
        tools:text="@string/profile_posts_following_counter"
        style="@style/Theme.Instagram.TextViewProfile"
        app:layout_constraintTop_toBottomOf="@id/text_view_following_counter"
        app:layout_constraintStart_toEndOf="@id/text_view_followers"
        app:layout_constraintEnd_toEndOf="@+id/text_view_following_counter"
        app:layout_constraintBottom_toBottomOf="@id/civ_profile_photo"
    />

    <TextView
        android:id="@+id/text_view_profile_username"
        tools:text="@string/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAlignment="textStart"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_marginTop="@dimen/view_small_spacing"
        app:layout_constraintStart_toStartOf="@id/civ_profile_photo"
        app:layout_constraintTop_toBottomOf="@id/civ_profile_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_view_bio"
    />

    <TextView
        android:id="@+id/text_view_bio"
        tools:text="Whatever happens, happens.."
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:layout_marginBottom="@dimen/view_small_spacing"
        app:layout_constraintStart_toStartOf="@id/civ_profile_photo"
        app:layout_constraintTop_toBottomOf="@id/text_view_profile_username"
        app:layout_constraintBottom_toTopOf="@id/button_edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <Button
        android:text="@string/edit_profile"
        android:id="@+id/button_edit_profile"
        style="@style/Theme.Instagram.ButtonEdit"
        app:layout_constraintStart_toStartOf="@id/civ_profile_photo"
        app:layout_constraintTop_toBottomOf="@id/text_view_bio"
        app:layout_constraintEnd_toEndOf="parent"
    />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_view_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/menu_profile_button_nav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>